添加了与服务器交互功能，第一页的四个按钮可以用了

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/mgarbage"
-    tools:context="com.pyz.viewpagerdemo.WelcomeActivity">
+    tools:context="com.wxw.rubbishApp.WelcomeActivity">
 
     <TextView
         android:layout_gravity="bottom"
