--- a/app/src/main/res/layout/btn1_layout.xml
+++ b/app/src/main/res/layout/btn1_layout.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:background="#ffffff">
 
+    <!--可回收物的按钮-->
+
     <!--cardView原来是用来设置阴影的-->
     <!--<android.support.v7.widget.CardView-->
         <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
@@ -18,8 +20,8 @@
                 android:paddingLeft="3dp"
                 android:paddingBottom="8dp"
                 android:paddingTop="8dp"
-                android:layout_marginLeft="26dp"
-                android:layout_marginRight="26dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:gravity="left|center_vertical"
                 android:background="@drawable/btn_selector"
                 android:drawableLeft="@mipmap/slaji1"
