--- a/app/src/main/res/layout/fragment_vpfragment2.xml
+++ b/app/src/main/res/layout/fragment_vpfragment2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
-    tools:context="com.pyz.viewpagerdemo.fragment.VPFragment2">
+    tools:context="com.wxw.rubbishApp.fragment.VPFragment2">
 
     <!-- TODO: Update blank fragment layout -->
 
