--- a/app/src/main/res/layout/fragment_vpfragment3.xml
+++ b/app/src/main/res/layout/fragment_vpfragment3.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pyz.viewpagerdemo.fragment.VPFragment3">
+    tools:context="com.wxw.rubbishApp.fragment.VPFragment3">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageButton
